# coreBankingMicroserviceApi

./: .gitignore  README.md
intech-backend/: docker-compose.yml
intech-backend/gateway/: Dockerfile  kong_bootstrap.py
intech-backend/services/accounts/: Dockerfile  pyproject.toml  requirements.txt
intech-backend/services/accounts/accounts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
intech-backend/services/accounts/alembic/: env.py
intech-backend/services/accounts/app/: main.py
intech-backend/services/accounts/app/api/v1/: accounts.py
intech-backend/services/accounts/app/core/: auth.py  config.py  db.py  deps.py  events.py  jwks.py  logger.py  rate_limiter.py  security.py
intech-backend/services/accounts/app/db/: db.py
intech-backend/services/accounts/app/models/: accounts.py
intech-backend/services/accounts/app/schemas/: account.py
intech-backend/services/accounts/tests/: conftest.py  test_accounts.py
intech-backend/services/auth/: Dockerfile  requirements.txt
intech-backend/services/auth/app/: main.py
intech-backend/services/auth/app/core/: config.py  logger.py  rate_limiter.py  redis.py  security.py
intech-backend/services/auth/app/db/: db.py
intech-backend/services/auth/app/models/: user.py
intech-backend/services/auth/app/schemas/: user_schema.py
intech-backend/services/auth/app/services/: user_service.py
intech-backend/services/auth/keys/: jwt-private.pem  jwt-public.pem
intech-backend/services/transactions/: DockerFile  requirements.txt
intech-backend/services/transactions/app/: main.py
(+17 files in other folders)
