[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "accounts"
version = "0.1.0"
description = "Accounts microservice"
authors = [{ name = "Othniel" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "aiosqlite",
]

[tool.setuptools]
packages = ["app"]
